# icub-hri-cuing

./: README.md  icub_world.sdf
results/physical-results/: 102.csv  105.csv  107.csv  108.csv  109.csv  110.csv  111.csv  112.csv  113.csv  114.csv  115.csv  116.csv  117.csv  141.csv  142.csv  144.csv  145.csv
results/simulator-results/: 18.csv  19.csv  20.csv  21.csv  22.csv  23.csv  24.csv  25.csv  26.csv  27.csv  28.csv  29.csv  30.csv  31.csv  32.csv  33.csv  34.csv  35.csv  36.csv  37.csv  38.csv  39.csv
results/simulator-results-old/: 1.csv  10.csv  11.csv  12.csv  13.csv  14.csv  15.csv  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv
with-lights/lights/controlLights/: controlLights.ino
with-lights/physical_robot/experiment/: CMakeLists.txt  main.cpp  side.h
with-lights/physical_robot/turn_left/: CMakeLists.txt  constants.cpp  main.cpp  turn_left
with-lights/physical_robot/turn_right/: CMakeLists.txt  main.cpp  turn_right
with-lights/simulator/: CMakeLists.txt  main.cpp  serialport.cpp  serialport.h
without-lights/physical/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  constants.cpp  main.cpp  output.csv  physical
without-lights/simulator/: constants.cpp  main.cpp
